--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,24 @@
 {
-    "name": "C++ Launch",
-    "type": "cppdbg",
-    "request": "launch",
-    "program": "${workspaceFolder}/a.out",
-    "stopAtEntry": false,
-    "customLaunchSetupCommands": [
-      { "text": "target-run", "description": "run target", "ignoreFailures": false }
-    ],
-    "launchCompleteCommand": "exec-run",
-    "linux": {
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "C/C++ Runner: Debug Session",
+      "type": "cppdbg",
+      "request": "launch",
+      "args": [],
+      "stopAtEntry": false,
+      "externalConsole": false,
+      "cwd": "/home/lucas/back_to_the_basics",
+      "program": "/home/lucas/back_to_the_basics/bin/main",
       "MIMode": "gdb",
-      "miDebuggerPath": "/usr/bin/gdb"
-    },
-    "osx": {
-      "MIMode": "lldb"
-    },
-    "windows": {
-      "MIMode": "gdb",
-      "miDebuggerPath": "C:\\MinGw\\bin\\gdb.exe"
+      "miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
     }
-  }
+  ]
+}
